# wsl-manager

./: .gitignore  AGENTS.md  LICENSE  README.md  README.zh-CN.md  index.html  package.json
.github/workflows/: build-windows.yml
docs/: ACCEPTANCE.md  ARCHITECTURE.md  PRD.md  SETUP.md  UI-MOCKUPS.md  WSL-INTERFACE.md
scripts/: build-windows.bat  build-windows.ps1
src/: App.css  App.tsx  api.ts  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/fixtures/: wsl-list.json  wsl-list.txt
src-tauri/src/: commands.rs  lib.rs  logger.rs  main.rs  models.rs  wsl.rs
