[package]
name = "wsl-manager"
version = "0.1.0"
description = "A visual WSL instance manager for Windows"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "wsl_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
encoding_rs = "0.8"
tokio = { version = "1", features = ["process", "rt", "macros", "fs"] }

